Read out interfaces, calculate broadcast addr. and save to array.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/margau/dmxnet#readme",
   "dependencies": {
     "jspack": "0.0.4",
+    "netmask": "^1.0.6",
     "simple-node-logger": "^0.93.37"
   },
   "devDependencies": {
