--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "eslint-config-strongloop": "^2.1.0"
+    "eslint-plugin-node": "^10.0.0"
   }
 }
