--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
+    "eslint-plugin-jsdoc": "^15.9.10",
     "eslint-plugin-node": "^10.0.0",
     "jsdoc": "^3.6.3"
   }
