--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0",
   "description": "ArtNet-DMX-sender and receiver for nodejs",
   "main": "lib.js",
+  "types": "lib.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "lint": "eslint --ignore-path .gitignore . --max-warnings 0",
